# LeetCode.cpp

./: .clangd  .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  SOLVED.md  cookie-update.cmd  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-challenge.yml  leetcode-cookie-health.yml
include/leetcode/: core.h  solution.hpp
include/leetcode/problems/: 132-pattern.h  absolute-difference-between-maximum-and-minimum-k-elements.h  add-binary.h  add-one-row-to-tree.h  add-two-integers.h  adjacent-increasing-subarrays-detection-ii.h  ambiguous-coordinates.h  analyze-organization-hierarchy.h  apple-redistribution-into-boxes.h  apply-discount-every-n-orders.h  array-prototype-last.h  available-captures-for-rook.h  balance-a-binary-search-tree.h  balanced-binary-tree.h  best-team-with-no-conflicts.h  best-time-to-buy-and-sell-stock-ii.h  best-time-to-buy-and-sell-stock-iii.h  biggest-single-number.h  binary-gap.h  binary-number-with-alternating-bits.h  binary-search-tree-to-greater-sum-tree.h  binary-watch.h  bitwise-ors-of-subarrays.h  block-placement-queries.h  brace-expansion-ii.h  build-a-matrix-with-conditions.h  build-array-from-permutation.h  camelcase-matching.h  can-i-win.h  can-you-eat-your-favorite-candy-on-your-favorite-day.h  cells-in-a-range-on-an-excel-sheet.h  champagne-tower.h  check-if-a-string-contains-all-binary-codes-of-size-k.h  check-if-array-is-sorted-and-rotated.h  check-if-digits-are-equal-in-string-after-operations-ii.h  check-if-there-is-a-valid-path-in-a-grid.h  check-if-two-string-arrays-are-equivalent.h  check-if-word-equals-summation-of-two-words.h  collecting-chocolates.h  combine-two-tables.h  (+377 more)
include/leetcode/utils/: linked-list.h  queue.h  stack.h  tree.h
script/: code-format.sh
script/ci/: check_leetcode_cookie.py  cookie_update_windows.ps1  detect_changed_problems.py  scheduled_cookie_watch.sh  sync_leetcode_cookie.py  sync_leetcode_cookie_wsl.py  test_locally.sh  validate_workflow.py
script/leetcode/: ai_solver.py  cache.py  cli.py  config.py  cookie.py  core.py  exceptions.py  get_slug.py  graphql_client.py  models.py  problem_pool.py  submit.py  template.py  utils.py
script/leetcode/ai/: __init__.py  aggregate_metrics.py  api_client.py  auto_solver.py  cli.py  guard.py  journal.py  leetcode_gate.py  messages.py  problem_context.py  prompts.py  report_generator.py  result_utils.py  scaffold.py  settings.py  solver.py  tool_round.py  tools.py
script/leetcode/api/: __init__.py  cache.py  client.py  repository.py
script/leetcode/cli/: __init__.py  __main__.py  _printers.py  add_cmd.py  doc_cmd.py  main.py  rm_cmd.py  test_cmd.py
script/leetcode/services/: __init__.py  design_class_extractor.py  file_generator.py  signature_parser.py  template_renderer.py
script/leetcode/submit/: __init__.py  __main__.py  cache.py  classifier.py  cli.py  expected_verdicts.py  feedback.py  http_api.py  result.py  submitter.py  translator.py
src/leetcode/problems/: 132-pattern.cpp  absolute-difference-between-maximum-and-minimum-k-elements.cpp  add-binary.cpp  add-one-row-to-tree.cpp  add-two-integers.cpp  add-two-numbers.cpp  adjacent-increasing-subarrays-detection-ii.cpp  ambiguous-coordinates.cpp  analyze-organization-hierarchy.cpp  apple-redistribution-into-boxes.cpp  apply-discount-every-n-orders.cpp  array-prototype-last.cpp  available-captures-for-rook.cpp  balance-a-binary-search-tree.cpp  balanced-binary-tree.cpp  best-team-with-no-conflicts.cpp  best-time-to-buy-and-sell-stock-ii.cpp  best-time-to-buy-and-sell-stock-iii.cpp  biggest-single-number.cpp  binary-gap.cpp  binary-number-with-alternating-bits.cpp  binary-search-tree-to-greater-sum-tree.cpp  binary-watch.cpp  bitwise-ors-of-subarrays.cpp  block-placement-queries.cpp  brace-expansion-ii.cpp  build-a-matrix-with-conditions.cpp  build-array-from-permutation.cpp  camelcase-matching.cpp  can-i-win.cpp  can-you-eat-your-favorite-candy-on-your-favorite-day.cpp  cells-in-a-range-on-an-excel-sheet.cpp  champagne-tower.cpp  check-if-a-string-contains-all-binary-codes-of-size-k.cpp  check-if-array-is-sorted-and-rotated.cpp  check-if-digits-are-equal-in-string-after-operations-ii.cpp  check-if-there-is-a-valid-path-in-a-grid.cpp  check-if-two-string-arrays-are-equivalent.cpp  check-if-word-equals-summation-of-two-words.cpp  collecting-chocolates.cpp  (+406 more)
src/leetcode/utils/: linked-list.cpp  queue.cpp  stack.cpp  tree.cpp
test/leetcode/: solution.cpp
test/leetcode/problems/: 132-pattern.cpp  absolute-difference-between-maximum-and-minimum-k-elements.cpp  add-binary.cpp  add-one-row-to-tree.cpp  add-two-integers.cpp  adjacent-increasing-subarrays-detection-ii.cpp  ambiguous-coordinates.cpp  analyze-organization-hierarchy.cpp  apple-redistribution-into-boxes.cpp  apply-discount-every-n-orders.cpp  array-prototype-last.cpp  available-captures-for-rook.cpp  balance-a-binary-search-tree.cpp  balanced-binary-tree.cpp  best-team-with-no-conflicts.cpp  best-time-to-buy-and-sell-stock-ii.cpp  best-time-to-buy-and-sell-stock-iii.cpp  biggest-single-number.cpp  binary-gap.cpp  binary-number-with-alternating-bits.cpp  binary-search-tree-to-greater-sum-tree.cpp  binary-watch.cpp  bitwise-ors-of-subarrays.cpp  block-placement-queries.cpp  brace-expansion-ii.cpp  build-a-matrix-with-conditions.cpp  build-array-from-permutation.cpp  (+390 more)
tests/: test_config.py
tests/ai/: test_auto_solver.py  test_cli_random_count.py  test_executor_reject_extra_tests.py  test_experiment_metrics.py  test_failed_run_snapshot.py  test_journal_token_usage.py  test_leetcode_gate.py  test_problem_context.py  test_prompts.py  test_settings.py  test_solver_force_new_solution.py  test_solver_guard.py  test_solver_require_leetcode.py  test_solver_short_circuit.py  test_tools_schema.py
tests/api/: test_client.py  test_repository.py
tests/services/: test_signature_parser.py
tests/submit/: test_cache.py  test_classifier.py  test_classifier_multi.py  test_classifier_skip_reason.py  test_expected_verdicts.py  test_feedback.py  test_http_api.py  test_import_boundaries.py  test_submitter.py
(+15 files in other folders)
